# imprint-python

./: .gitignore  README.md  pyproject.toml
imprint/: __init__.py  client.py  config.py  context.py  llm.py  sampler.py  span.py
imprint/integrations/: __init__.py  openai_agents.py
